<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainContent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageDetailAvatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_account"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/textDetailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/judul_thread"
                android:textColor="@color/blueDarkHigh"
                android:ellipsize="end"/>
            <TextView
                android:id="@+id/textDetailPostedBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@string/posted_by"/>
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:id="@+id/imageDetailImage"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/description"
        android:id="@+id/textDetailDescription"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comments"
        android:padding="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainContent"
        android:layout_above="@+id/inputComment"
        tools:listitem="@layout/item_comment"/>
    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainContent"
        android:layout_above="@+id/inputComment"
        android:layout_gravity="center"
        android:orientation="vertical"
        shimmer:duration="800">

        <!-- Adding 7 rows of placeholders -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include layout="@layout/item_thread_shimmer" />
            <include layout="@layout/item_thread_shimmer" />
            <include layout="@layout/item_thread_shimmer" />
            <include layout="@layout/item_thread_shimmer" />
            <include layout="@layout/item_thread_shimmer" />
            <include layout="@layout/item_thread_shimmer" />
            <include layout="@layout/item_thread_shimmer" />
            <include layout="@layout/item_thread_shimmer" />
            <include layout="@layout/item_thread_shimmer" />
            <include layout="@layout/item_thread_shimmer" />
            <include layout="@layout/item_thread_shimmer" />
        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>
    <LinearLayout
        android:id="@+id/inputComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <EditText
            android:id="@+id/edtDetailAddComment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:hint="@string/add_comment"/>
        <Button
            android:id="@+id/buttonDetailSendComment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_weight="1" />
    </LinearLayout>
</RelativeLayout>